fix images overflowing on demos page on mobile

--- a/src/components/demo/demo-listing/demo-listing.module.scss
+++ b/src/components/demo/demo-listing/demo-listing.module.scss
@@ -3,6 +3,7 @@
 
 .container {
   @extend .innerCard;
+  overflow: hidden;
   padding: 0;
   width: 425px;
 }
@@ -17,6 +18,7 @@
 .gitHubIcon {
   margin-right: 4px;
 }
+
 .titleContainer {
   margin-top: 0;
   font-size: 36px;
@@ -33,13 +35,23 @@
   color: inherit;
 }
 
+.demoThumbnailContainer {
+  overflow: hidden;
+}
+
 .demoThumbnail {
   margin-bottom: 0;
   border-bottom: 1px solid #f0f0f0;
+  overflow: hidden;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .demoThumbnail img {
-  margin-bottom: 0;
+    margin: 0;
+    left: 50%;
+    position: absolute;
 }
 .subtitle {
   padding: 0;
