--- a/src/shared-styles.module.scss
+++ b/src/shared-styles.module.scss
@@ -10,6 +10,8 @@
   @extend .boxShadow;
   padding: 20px;
   margin-top: 20px;
+  margin-left: 10px;
+  margin-right: 10px;
   background-color: white;
 }
 
